# robocon11-2-vision

./: .gitignore  .gitmodules  run_competition.sh  run_mapping.sh  启动流程.txt  里程计启动流程.txt
maps/r2_sam_map_001/: metadata.txt  poses.csv
maps/r2_sam_map_001/keyframes/: keyframe_000000.pcd  keyframe_000001.pcd  keyframe_000002.pcd  keyframe_000003.pcd  keyframe_000004.pcd  keyframe_000005.pcd  keyframe_000006.pcd  keyframe_000007.pcd  keyframe_000008.pcd  keyframe_000009.pcd  keyframe_000010.pcd  keyframe_000011.pcd  keyframe_000012.pcd  keyframe_000013.pcd  keyframe_000014.pcd  keyframe_000015.pcd  keyframe_000016.pcd  keyframe_000017.pcd  keyframe_000018.pcd  keyframe_000019.pcd  keyframe_000020.pcd  keyframe_000021.pcd  keyframe_000022.pcd  keyframe_000023.pcd  keyframe_000024.pcd  keyframe_000025.pcd  keyframe_000026.pcd  keyframe_000027.pcd  keyframe_000028.pcd  keyframe_000029.pcd  keyframe_000030.pcd  keyframe_000031.pcd  keyframe_000032.pcd  keyframe_000033.pcd  keyframe_000034.pcd  keyframe_000035.pcd  keyframe_000036.pcd  keyframe_000037.pcd  keyframe_000038.pcd  keyframe_000039.pcd  (+2 more)
src/WeaponPole_detect/: .gitignore  CMakeLists.txt  package.xml
src/WeaponPole_detect/include/: block_face_pipeline.hpp  cameras.hpp  serial_connector.hpp  weapon_pipeline.hpp  yolo_model_segmentor.hpp
src/WeaponPole_detect/launch/: robot_vision.launch.py
src/WeaponPole_detect/src/: pole_node.cpp  weapon_node.cpp  weapon_pole_node.cpp
src/WeaponPole_detect/src/qq/: pole_node.cpp  weapon_node.cpp
src/WeaponPole_detect/src/tt/: pole_node.cpp  weapon_node.cpp  weapon_pole_node.cpp
src/fastlio_ws/MapPCD/: R2_Field_Map_cheshang_v1.pcd  R2_Field_Map_shuiping_v2.pcd  R2_Field_Map_shuiping_v3.pcd  R2_Field_Map_v2.pcd  R2_Field_Map_v3.pcd  R2_Field_Map_v4.pcd  R2_Field_Map_v5.pcd  README.md
src/fastlio_ws/PCD_FILES/: R2_Field_Map_fixed.pcd  R2_Field_Map_fixed_v2.pcd
src/fastlio_ws/src/FAST_LIO_ROS2/: .gitignore  CMakeLists.txt  package.xml
src/fastlio_ws/src/FAST_LIO_ROS2/config/: mid360.yaml  mid360_localization.yaml  r2_kfs_detector.yaml  r2_localizer.yaml  r2_localizer_live.yaml
src/fastlio_ws/src/FAST_LIO_ROS2/docs/: simple_odom_serial_protocol.md
src/fastlio_ws/src/FAST_LIO_ROS2/include/: FieldMapTransform.hpp  MapManager.hpp  NDTAligner.hpp  OdomSynchronizer.hpp
src/fastlio_ws/src/FAST_LIO_ROS2/launch/: r2_kfs_detection.launch.py  r2_localization.launch.py
src/fastlio_ws/src/FAST_LIO_ROS2/rviz/: r2_localization.rviz
src/fastlio_ws/src/FAST_LIO_ROS2/src/: FieldMapTransform.cpp  MapManager.cpp  NDTAligner.cpp  OdomSynchronizer.cpp  map_saver.cpp  r2_kfs_detector.cpp  r2_localizer_node.cpp  simple_odom.cpp
src/fastlio_ws/src/fast_lio_localization_sc_qn_ros2/: CMakeLists.txt  package.xml
src/fastlio_ws/src/fast_lio_localization_sc_qn_ros2/config/: localization_sc_qn.yaml
src/fastlio_ws/src/fast_lio_localization_sc_qn_ros2/include/fast_lio_localization_sc_qn_ros2/: map_matcher.hpp  pose_cloud.hpp  utilities.hpp
src/fastlio_ws/src/fast_lio_localization_sc_qn_ros2/launch/: localization_sc_qn.launch.py
src/fastlio_ws/src/fast_lio_localization_sc_qn_ros2/src/: localization_node.cpp  map_matcher.cpp
src/fastlio_ws/src/fast_lio_sam_sc_qn_ros2/: CMakeLists.txt  package.xml
src/fastlio_ws/src/fast_lio_sam_sc_qn_ros2/config/: fast_lio_sam_sc_qn.yaml
src/fastlio_ws/src/fast_lio_sam_sc_qn_ros2/include/fast_lio_sam_sc_qn_ros2/: loop_closure.hpp  pose_cloud.hpp
src/fastlio_ws/src/fast_lio_sam_sc_qn_ros2/launch/: fast_lio_sam_sc_qn.launch.py  system_run.launch.py
src/fastlio_ws/src/fast_lio_sam_sc_qn_ros2/src/: fast_lio_sam_sc_qn_node.cpp  loop_closure.cpp
src/hand_input_path/: package.xml  setup.cfg  setup.py
src/hand_input_path/hand_input_path/: hand_input_path_node.py
src/livox_ws/src/livox_ros_driver2/: CMakeLists.txt
src/livox_ws/src/livox_ros_driver2/config/: MID360_config.json  MID360s_config.json
src/path_planning_node/: CMakeLists.txt  package.xml
src/path_planning_node/include/path_planning_node/: path_planning.hpp  path_planning_node.hpp  payload_structure.hpp  transfer_protocol.hpp  verification_algorithm.hpp
src/path_planning_node/src/: path_planning_node.cpp  path_planning_test.cpp  path_planning_test_2.cpp
src/r2_serial_ws/: README.md
src/r2_serial_ws/src/r2_serial/: CMakeLists.txt  package.xml
src/r2_serial_ws/src/r2_serial/include/r2_serial/: serial_connector.hpp  serial_protocol.hpp  transfer_protocol.hpp  verification_algorithm.hpp
src/r2_serial_ws/src/r2_serial/launch/: r2_data_downlink.launch.py
src/r2_serial_ws/src/r2_serial/msg/: SerialPacket.msg
src/r2_serial_ws/src/r2_serial/src/: r2_data_downlink.cpp
src/vision_detector/: CMakeLists.txt  package.xml
src/vision_detector/include/: cameras.hpp  geometry_utils.hpp  yolo_model_classifier.hpp  yolo_model_detector.hpp  yolo_model_interface.hpp  yolo_model_obb.hpp  yolo_model_pose.hpp
src/vision_detector/launch/: robot_vision.launch.py
src/vision_detector/src/: nine_grid_block.cpp  weapon_pole.cpp
