<?xml version="1.0"?>
<package format="3">
  <name>fast_lio_sam_sc_qn_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 backend graph optimization and ScanContext loop closure for FAST-LIO.</description>

  <maintainer email="robocon@example.com">GDUT Robocon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>scancontext_tro</depend>
  <depend>nano_gicp</depend>
  <depend>quatro</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>gtsam</build_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>gtsam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
